Create Base HTML&CSS (Structure + Post Style)

--- a/index.html
+++ b/index.html
@@ -1,15 +1,85 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="./css/styles.css">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Skyblog de Suzane</title>
-    </head>
-    <body>
-        <h1>Skyblog de Suzane soon</h1>
-    </body>
+    <meta http-equiv="content-language" content="fr">
+    <meta name="description"
+        content="Tais-toi et Danse. ◘◘◘◘◘◘◘◘◘ &quot; <<N'aie pas peur, murmurai-je. Nous sommes faits l'un pour L'autre.>> L'instant était si parfais, si juste qu'il était impossible d'en douter. Ses bras se refermèrent autour de moi, me pressant contre lui... << A jamais >>, rencherit-il. &quot; &quot;Révélation&quot;, ...">
+
+    <meta property="og:site_name" content="Skyrock">
+    <meta property="og:type" content="skyrock-com:blog">
+    <meta property="og:url" content="">
+    <meta property="og:title" content="Ma vie ne se raconte pas, elle se C H A N T E ‼ ♪">
+    <meta property="og:description"
+        content="Tais-toi et Danse. ◘◘◘◘◘◘◘◘◘ &quot; <<N'aie pas peur, murmurai-je. Nous sommes faits l'un pour L'autre.>> L'instant était si parfais, si juste qu'il était impossible d'en douter. Ses bras se refermèrent autour de moi, me pressant contre lui... << A jamais >>, rencherit-il. &quot; &quot;Révélation&quot;, ...">
+    <meta property="og:image" content="https://i.skyrock.net/9929/56169929/pics/photo_56169929_8.jpg">
+
+    <link rel="shortcut icon" href="https://static.skyrock.net/img/favicon_v5b.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <title>Blog de Future-Mrs-Efron - Ma vie ne se raconte pas, elle se C H A N T E ‼ ♪ - Skyrock.com</title>
+</head>
+
+<body>
+
+    <header>
+        <img src="https://static.skyrock.net/img/favicon_v5b.ico" alt="Skyblog icon" />
+
+        <div>
+            <input placeholder="Rechercher dans les blogs" />
+            <button class="btn blue">Connecte-toi</button>
+            <button class="btn green">Crée ton blog</button>
+        </div>
+    </header>
+
+    <div id="wrapper">
+        <section class="side">
+
+        </section>
+
+        <section class="center">
+            <article>
+                <header>
+                    <code>Construction, voir abandon.</code>
+                </header>
+                <div>
+                    <img height="200px" src="https://i.skyrock.net/9929/56169929/pics/2924862653_0_3.jpg" />
+                    <span>
+                        Plus vrmt le temps de m'occuper d'un Blog.
+                        Disons que celui-ci est actuellement en Rénovation, jusqu'à Nouvel Ordre.
+                        Je ne laisse que les articles concernant la 5°D, ainsi que celui sur les Origines.
+                        A bientôt les Gens ! 😁
+                    </span>
+                </div>
+
+                <div class="opt-comment">
+                    <ul class="options">
+                        <li>❤ 0</li>
+                        |
+                        <li>📢 0</li>
+                        |
+                        <li>🧸Partager</li>
+                    </ul>
+                    <ul class="comments">
+                        <li>🧻 Commentaires</li>
+                    </ul>
+                </div>
+
+                <footer>
+                    <span>#Posté le dimanche 05 septembre 2010 19:01</span>
+                </footer>
+            </article>
+        </section>
+
+        <section class="side">
+
+        </section>
+    </div>
+
+</body>
+
 </html>
