--- a/index.html
+++ b/index.html
@@ -38,6 +38,37 @@
 
     <div id="wrapper">
         <section class="side">
+            <ul>
+                <li>Blog</li>
+                <li>Profil</li>
+            </ul>
+
+            <p class="center">Ma vie ne se raconte pas, elle se C H A N T E ‼ ♪</p>
+            <img class="avatar" src="https://i.skyrock.net/9929/56169929/pics/photo_56169929_small_8.jpg"
+                alt="Photo de Future-Mrs-Efron" itemprop="thumbnailUrl">
+
+            <p>Description : <br />Tais-toi et Danse.</p>
+
+            <p>◘◘◘◘◘◘◘◘◘</p>
+
+            <p>" <<N'aie pas peur, murmurai-je. Nous sommes faits l'un pour L'autre.>>
+                    L'instant était si parfais, si juste qu'il était impossible d'en douter.
+                    Ses bras se refermèrent autour de moi, me pressant contre lui...
+                    <br />
+                    << A jamais>>, rencherit-il. "
+            </p>
+            <p>"Révélation", Stephanie Meyer, "Bella Swan", pages 100-101.</p>
+            <p>Ces livres me font rêver, vibrer, trembler, réfléchir !</p>
+
+            <p>◘◘◘◘◘◘◘◘◘</p>
+
+            <p>Nico' ♥ <br />
+                Comment l'oubliier ?! <br />
+                Je Ne T'Oublierais Jamais ♥ <br />
+                :'-(
+            </p>
+
+            <p>◘◘◘◘◘◘◘◘◘</p>
 
         </section>
 
