Add background and right sidebar

--- a/index.html
+++ b/index.html
@@ -107,7 +107,15 @@
         </section>
 
         <section class="side">
-
+            <p>Infos <br /><br />
+                Création : 23/01/2009 à 20:12<br />
+                Mise à jour : 13/11/2010 à 17:54<br />
+                1 398 visites<br />
+                3 visites ce mois<br />
+                5 articles<br />
+                233 commentaires<br />
+                72 amis<br />
+                77 favoris</p>
         </section>
     </div>
 
